# Frizmee_v1

./: CMakeLists.txt  nrf54l15dk_nrf54l15_cpuapp.overlay  prj-coex.conf  prj.conf  sample.yaml
src/: ble.h  main.c  sys_off.h  ws2812.h
